Create sidebarChat  component and css for better user experience

--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,55 +1,83 @@
 .sidebar {
 
 
-  /*background-color: #e17c7c;*/
-  background-color: #ededed;
+    /*background-color: #e17c7c;*/
+    background-color: #ededed;
+    display: flex;
+    flex-direction: column;
+
 }
 
 .sidebar__header {
-  display: flex;
-  align-items: center;
-  padding: 16px;
-  /*background-color: #075e54;*/
-  color: #fff;
-  justify-content: space-between;
-  border-right: 1px solid lightgray;
+    display: flex;
+    align-items: center;
+    padding: 16px;
+    /*background-color: #075e54;*/
+    color: #fff;
+    justify-content: space-between;
+    border-right: 1px solid lightgray;
 }
 
-/*.sidebar__header  {*/
-/*  width: 40px;*/
-/*  height: 40px;*/
-/*  background-color: #fff;*/
-/*  border-radius: 50%;*/
-/*  margin-right: 16px;*/
-/*}*/
 
-.sidebar__headerRight  {
-  display: flex;
-  /*justify-content: space-between;*/
-  /*min-width: 8vw;*/
+.sidebar__headerRight {
+    display: flex;
+    /*justify-content: space-between;*/
+    /*min-width: 8vw;*/
 
-  align-items: center;
+    align-items: center;
+}
+
+.MuiIconButton-root {
+    font-size: 3rem !important;
 }
 
 .sidebar__search {
-  display: flex;
+    display: flex;
+    height: 40px;
+    background-color: #f6f6f6;
+
+    padding: 0 0.5rem;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
 }
+
+.search__container {
+    display: flex;
+    align-items: center;
+
+    border-radius: 20px;
+    background: white;
+    height: 32px;
+    padding: 0 0.25rem;
+}
+.search__container .MuiSvgIcon-root {
+    color: grey;
+}
+
 .sidebar__input {
-  height: 40px;
-  background-color: #fff;
-  margin: 1rem 0.5rem;
-  border-radius: 28px;
-  width: 100%;
-  padding: 0.5rem 2rem;
-  font-size: 1rem;
-  border: none;
-  outline: none;
-  opacity: 0.7;
+
+    background: transparent;
+    border: none;
+    outline: none;
+    opacity: 0.7;
+    margin-left: 10px;
 }
 
 .sidebar__chats {
-  flex: 1;
-  background-color: #fff;
-  margin: 16px;
-  border-radius: 16px;
+
+    background-color: white;
+    flex: 1;
+
+    overflow-y: scroll;
+
+
+
+}
+
+.sidebar__icon {
+    font-size: 1rem !important;
+    background: black;
 }
