--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -9,6 +9,8 @@
 }
 
 .sidebar__header {
+
+    height: 70px;
     display: flex;
     align-items: center;
     padding: 16px;
@@ -16,6 +18,7 @@
     color: #fff;
     justify-content: space-between;
     border-right: 1px solid lightgray;
+
 }
 
 
