Set Google user authentication for sign in

--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,12 +1,13 @@
 .sidebar {
 
-
+    flex: 0.35;
     /*background-color: #e17c7c;*/
     background-color: #ededed;
     display: flex;
     flex-direction: column;
 
 }
+
 
 .sidebar__header {
 
